wp-content/themes/accelerate-theme-child/style.css
/*
Theme Name:   Accelerate Theme Child
Theme URI:    http://example.com/accelerate-theme-child/
Description:  Accelerate Child Theme - Accelerate
Author:   	ReeseDev
Author URI:   http://example.com
Template: 	accelerate-theme
Version:      2.0.0
Tags:     	light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
Text Domain:  accelerate-theme-child
*/
/*-------------------------------*/
/* HOMEPAGE STYLES */
.home-page {
    background: url("img/taxi-photo.jpg") no-repeat scroll right center / cover rgba(0, 0, 0, 0);
}

#masthead {
    background: none repeat scroll 0 0 #45ac9d;
}

.button {
background: #45ac9d;
}

/*-------------------------------*/
/* FEATURED WORK STYLES */
.featured-work h4{
	text-transform: uppercase;
	text-align: center;	
	margin: 34px 0;	
}
.featured-work{
	text-align: center;
}
ul.homepage-featured-work{
	list-style-type: none;
	display: flex;
	justify-content: center;	
	flex-wrap: wrap;	
}
.individual-featured-work{
	width: 90%;
	align-items: center;	
}
.individual-featured-work h3{
	text-align: center;
	font-weight: 500;
	margin-top: 20px;	
}

		/***********************************************/
		/* MEDIA QUERY FRONT-PAGE FEATURED WORK STYLES */

		@media (min-width: 768px) {
			/* FEATURED WORK STYLES */
			.featured-work h4{
				text-transform: uppercase;
				text-align: center;	
			}
			ul.homepage-featured-work{
				align-content: center;
				justify-content: space-between;	
			}
			.individual-featured-work{
				width: 31%;
			}
		}
		/************************************************/

/*-------------------------------*/
/**********************************
**** MOBILE MAGIC FOR STACKING **** 
** BLOG POSTS & TWEET DIVS BELOW **
***********************************
/*-------------------------------

	NONE 

---------------------------------*/
/* BLOG POST STYLES */
.blog-post {
	width: 65%;
	margin-bottom: 2em;
	margin: 20%;
}

.blog-post h4 {
    font: 700 1em/1.75 'Montserrat', 'Open Sans', Arial, sans-serif;
    color: #a6a6a6;
    text-transform: uppercase;
    margin: 2em 0 .5em;
}

.blog-post h3 {
	font-size: 1.5em;
	margin-top: 25px;
}

.read-more-link {
	font-family: 'Montserrat';
	font-weight: 700;
	color: #45ac9d;
	text-transform: uppercase;
}

		/*********************************************/
		/* MEDIA QUERY CASE STUDIES STYLES */
		/* BLOG POST STYLES */
		@media (min-width: 768px) {
			.blog-post {
				width: 40%;
				float: left;
				margin-bottom: 2em;
				margin: 0 0 0 5%;
			}
		}
		/*********************************************/

/*------------------------------*/
/* TWITTER WIDGET */
.twitter-posts{
	width: 100%;
	margin-right: 15%;
	margin-bottom: 2em;
}

.twitter-content ul{
	list-style-type: none;
	margin: 5% 20% 3% 20%;
}

.twitter-content li{
	text-align: left;
	width: 100%;
}
/******** FONTS & LINKS ********/
/* RECENT TWEET TITLE */
.twitter-content h5 {
	font: 700 1em/1.75 'Montserrat', 'Open Sans', Arial, sans-serif;
    color: #a6a6a6;
    text-transform: uppercase;
	margin: 2em 0 .5em;
	margin-left: 23%;
}
/* @Accelerate LINK */
 .twitter-posts h3 {
	font-size: 1.5em;
	margin-top: 25px;
	margin-left: 23%;
}
/* FOLLOW US LINK */
.read-more-link h4{
	font-family: 'Montserrat';
	font-weight: 700;
	color: #45ac9d;
	text-transform: uppercase;
	margin-left: 23%;
}

		/*********************************************/
		/* MEDIA QUERY CASE STUDIES STYLES */
		/* TWITTER WIDGET */
		@media (min-width: 768px) {
				.twitter-posts{
				width: 30%;
				float: right;
			}
			
			.twitter-content ul{
				margin: 20px 0 0 0;
				width: 400px;
			}

			/******** FONTS & LINKS ********/
			/* RECENT TWEET TITLE */
			.twitter-content h5 {
				margin-left: 0;
			}
			/* @Accelerate LINK */
			.twitter-posts h3 {
				margin-left: 0;
			}
			/* FOLLOW US LINK */
			.read-more-link h4{
				margin-left: 0;
			}

		}

/*-------------------------------*/
/* CASE STUDIES */
.case-study-sidebar{
	width: 90%;
	color: #636060;
	padding-bottom: 40px;
}
aside h2{
	font-size: 1em;
}
aside h4{
	font-weight: lighter;
	font-size: .7em;
	margin-top: 10px;
}
aside h4 span{
	font-weight: 600;
}
.case-study-images {
	width: 100%	
}
.case-study-images img{
	margin-bottom: 45px;
/* KEEP IMAGES THE SAME SIZE AS ADDED */
	width: 100%;
	height: auto;
/*********************/
	
}
		/*********************************************/
		/* MEDIA QUERY CASE STUDIES STYLES */

		@media (min-width: 768px) {
			/* CASE STUDIES ACRCHIVE PAGE STYLES */
			.case-study{
				overflow: auto;
			}
			.case-study-sidebar{
				float: left;
				width: 40%;				
			}			
			.case-study-images img{
				float: right;
				width: 60%;	
			}
		}
		/*********************************************/

/*-------------------------------*/
/* CASE STUDIES ACRHIVE PAGE */

.case-study-sidebar{
	width: 90%;
}
.case-study-images img{
	width: 100%;

}
		/********************************************/
		/* MEDIA QUERY CASE STUDIES ARCHIVE STYLES */

		@media (min-width: 768px) {
			/* CASE STUDIES ACRCHIVE PAGE STYLES */

			.case-study-sidebar{
				float: left;
				width: 31%;
			}
			.case-study-images img{
				float: right;
				width: 60%;
			}
		}
		/********************************************/

/*-------------------------------*/
/* NAV STYLES */
/* HEADER TOP NAV */
ul.nav-menu{
	display: flex;
	flex-wrap: nowrap;
	justify-content: space-around;
}

/* SOCIAL MEDIA FOOTER */
ul.social-media-menu {
	display: flex;
	flex-wrap: nowrap;
	justify-content: space-between;
	list-style-type: none;	
	padding-left: 75%;
}
.social-media-menu a{
	font-size: .9em;
	display: flex;
	justify-content: space-between;
}
		/********************************************/
		/* MEDIA QUERY HEADER AND FOOTER NAV */

		@media (min-width: 768px) {
			/* NAV STYLES */
			/* SOCIAL MEDIA FOOTER */
			ul.social-media-menu {
				*display: flex;
				flex-wrap: nowrap;
				list-style-type: none;
				padding-left: 0;		
			}	
			.social-media-menu a{
				font-size: 1.5em;
			}
		}
		/********************************************/

/*-------------------------------*/
/* CONTACT FORM */

#primary-contact{
	width: 50%;
}
.main-content-contact h2{
	font-size: 1.5em;
}

.field-wrap button, 
.field-wrap input[type=button],
.field-wrap input[type=submit],
.field-wrap>div input[type=checkbox] {
	float: right;	
}

input[type="button"], input[type="submit"] {
	background: #45ab9d;
	padding: 1.5em 5.5em;
}

/*-------------------------------*/
/* ABOUT PAGE */
/* HEADER */
.main-content-about p{
font-size: 1.2em;
color: #ffffff;
margin: 0 20%;
}

/* MAIN CONTENT */
.our-service h4,
.our-service{
text-align: center;
margin: 0 20%;
}

.our-service p{
margin-bottom: 20%;
}

/* GENERAL BODY STYLES */
#secondary h4{
font-size: 1.2em;
}

.icon-left,
.icon-right{
padding: 20px 0 0px 0;
margin: 0 29%;
}

/* ALTERNATING STYLES ICON AND TEXT*/
.content-strategy,
.influencer-mapping,
.social-media-strategy,
.design-development{
margin: 5% 20% 10% 20%;
}


/* LOWER NAV AND BUTTON AREA */
#navigation.container{
overflow: auto;
}
	
#navigation p{
font-weight: bold;
font-size: 1.2em;
margin-top: 0;

}

		/********************************************/
		/* MEDIA QUERY HEADER AND FOOTER NAV */

		@media (min-width: 768px) {
			/* ABOUT PAGE */

			/* HEADER */
			.main-content-about p{
			font-size: 1.5em;
			color: #ffffff;
			margin: 0 30%;
			}

			/* MAIN CONTENT */
			.our-service h4,
			.our-service{
			text-align: center;
			margin: 0 30%;
			}
			.our-service p{
			margin-bottom: 70px;
			}

			/* GENERAL BODY STYLES */
			#secondary{
			margin: 0 25%;
			}

			#secondary h4{
			font-size: 1.2em;	
			}

			.icon-right,
			.icon-left{
			padding: 0;
			margin: 0;
			}

			/* ALTERNATING STYLES ICON AND TEXT*/
			.content-strategy,
			.influencer-mapping,
			.social-media-strategy,
			.design-development{
			margin: 0;
			overflow: auto;
			}

			.design-development{
			margin-bottom: 10%;
			}

			.icon-left{
			float: left;
			width: 25%;	
			margin-top: 30px;
			}

			.text-right{
			float: right;
			width: 65%;	
			}

			.icon-right{
			float: right;
			width: 25%;
			margin-top: 30px;
			}

			.text-left{
			float: left;
			width: 65%;	
			}

			/* LOWER NAV AND BUTTON AREA */
			#navigation.container{
			overflow: auto;
			}

			#navigation p{
			font-size: 1.4em;
			display: inline-block;
			margin: 30px 40px;
			}
		}
		/********************************************/

/*-------------------------------*/
/* 404 PAGE */

.container-404 img{
	width: 100%;
}

/* FONT EXPERIMENT */
.container-404 h3{
	font-family: 'Lemonada', sans-serif;
	text-align: center;
	font-size: 2.5em;
	margin-top: 20px;
}

.error-404{
	display: flex;
	justify-content: center;
	align-items: center;
}

.error-404 .button{
	padding: 17px 50px;
	width: 300px;
	margin-top: 20px;	
}

